--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
