--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.4.0",
     "chart.js": "^3.9.1",
     "dotenv": "^16.3.1",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
@@ -25,7 +25,8 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
