--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
-    "chart.js": "^3.9.1",
+    "chart.js": "^4.3.0",
     "dotenv": "^16.3.1",
     "faker": "^5.5.3",
+    "feather-icons": "^4.29.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
