--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "dotenv": "^16.3.1",
     "faker": "^5.5.3",
     "feather-icons": "^4.29.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
