--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
+    "axios-rate-limit": "^1.3.0",
     "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "faker": "^5.5.3",
