--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
-    "react-select": "^5.7.4"
+    "react-select": "^5.7.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
