--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "axios-rate-limit": "^1.3.0",
     "chart.js": "^4.4.0",
@@ -32,6 +33,7 @@
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.4",
     "xlsx": "^0.18.5"
