--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "feather-icons": "^4.29.1",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
